--- a/roles/ssh/templates/sshd.service.j2
+++ b/roles/ssh/templates/sshd.service.j2
@@ -1,17 +1,21 @@
 [Unit]
 Description=OpenBSD Secure Shell server
+Documentation=man:sshd(8) man:sshd_config(5)
+After=network.target auditd.service
 
 [Service]
-ExecStartPre={{ sshd_binary }} -t
-ExecStart={{ sshd_binary }} -D
-ExecReload={{ sshd_binary }} -t
+EnvironmentFile=-/etc/default/ssh
+ExecStartPre=/usr/sbin/sshd -t
+ExecStart=/usr/sbin/sshd -D $SSHD_OPTS
+ExecReload=/usr/sbin/sshd -t
 ExecReload=/bin/kill -HUP $MAINPID
 KillMode=process
 Restart=on-failure
 RestartPreventExitStatus=255
 Type=notify
-RuntimeDirectory={{ sshd_binary | basename }}
+RuntimeDirectory=sshd
 RuntimeDirectoryMode=0755
 
 [Install]
 WantedBy=multi-user.target
+Alias=sshd.service
