--- a/roles/docker/templates/daemon.json.j2
+++ b/roles/docker/templates/daemon.json.j2
@@ -3,5 +3,5 @@
   "tls": false,
   "experimental" : true,
   "insecure-registries" : ["127.0.0.1:5000"],
-  "hosts": ["tcp://0.0.0.0:2375", "unix:///var/run/docker.sock"]
+  "hosts": ["unix:///var/run/docker.sock"]
 }
